使用するライブラリを Apache Sanselan 0.97 から Apache Commons Imaging 1.0 RC7 に変更

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ modules.xml
 # --------------------------------------------------------------------------------
 
 # Your application settings goes here.
+!lib/*.jar
